# Trash

./: .gitignore  MQTT连接中移物联网ONENET.docx  README.md  查看二进制的HxDSetup.7z
Advanced IP Scanner/: advanced_ip_scanner_zh_CN.qm  mac_interval_tree.txt  xml_to_csv.xsl  xml_to_html.xsl
AutoUploadGithub/: CMakeLists.txt  main.cpp  myprocess.cpp  myprocess.h  myprocess.ui
KEIL5-MDK配色方案/: 配色步骤.md
KEIL5-MDK配色方案/1/: global.prop
KEIL5-MDK配色方案/2/: global.prop
KEIL5-MDK配色方案/4/: global.prop
STM32F4-LED/: Last Loaded STM32F4_LED.pdsbak  STM32F4_LED.pdsprj  STM32F4_LED.pdsprj.DESKTOP-PIAU0DQ.11868.workspace
STM32F4-LED/STM32F401RC/: .cproject  .mxproject  .project  CMakeLists.txt  STM32F401RC.ioc  STM32F401RC.xml
STM32F4-LED/STM32F401RC/Core/Src/: gpio.c  main.c
USB串口ISP下载软件/FlyMcu 载软件串口ISP/: FlyMcuConfig.ini  ProgramLogs.txt
UltraEdit10c/: README.md
source insight/: Source insight扩展宏使用.docx  quicker.em
source insight/Source Insight 4.00.0084/crack/: readme.txt
sscom5.13.1/: sscom51.ini
大佬学习笔记/: 1.ARM裸机全集.docx  2.C语言高级专题.docx  3.uboot和Linux内核移植.docx  4.Linux应用编程和网络编程.docx
